# treetracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: auth.py  config.py  db.py  exif.py  ingest.py  main.py  models.py  moderation.py  ocr.py  ratelimit.py  storage.py
app/routes/: api.py  auth.py  pages.py  photos.py
app/static/: admin.js  app.css  manifest.webmanifest  map.js  submit.js  sw.js
app/templates/: admin.html  base.html  index.html  submit.html  tree.html
docs/superpowers/specs/: 2026-05-22-tree-tracker-design.md
tests/: conftest.py  test_exif.py  test_ocr.py  test_ratelimit.py  test_storage.py
