[project]
name = "treetracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "authlib>=1.3",
  "itsdangerous>=2.2",
  "httpx>=0.28",
  "pillow>=11.0",
  "pillow-heif>=0.20",
  "anthropic>=0.42",
  "python-multipart>=0.0.20",
  "jinja2>=3.1",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
